fixed responsiveness on mobile

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -5,14 +5,19 @@
   font-family: 'Rubik', sans-serif;
 }
 
-
 #root {
   height: 100vh;
+  width: 100vw;
 }
 
 body {
-  background-color: #3A465F;
+  background-color: #3a465f;
   height: 100%;
+}
+
+span {
+  font-size: 20px;
+  margin-left: 20px;
 }
 
 .portfolio-container {
@@ -47,7 +52,7 @@ body {
 }
 
 .nav-item {
-  color: #DCE1EA;
+  color: #dce1ea;
   font-size: 30px;
   opacity: 0.5;
   transition: 0.5s;
@@ -68,12 +73,12 @@ body {
 }
 
 .name {
-  color: #DCE1EA;
+  color: #dce1ea;
   font-size: 70px;
 }
 
 .title {
-  color: #DCE1EA;
+  color: #dce1ea;
   font-size: 32px;
   transition: 0.5s;
   letter-spacing: 5px;
@@ -96,7 +101,8 @@ body {
   grid-column: 1 / 13;
   justify-self: center;
   display: flex;
-  width: 50%;
+  flex-wrap: wrap;
+  width: 100%;
   height: 50%;
   align-items: center;
   align-self: center;
@@ -110,13 +116,15 @@ body {
 }
 
 .home-icon {
-  color: #DCE1EA;
+  color: #dce1ea;
   transition: 0.5s;
   margin-right: 20px;
 }
 
-a:visited, a:link, a:active {
-  color: #DCE1EA;
+a:visited,
+a:link,
+a:active {
+  color: #dce1ea;
   text-decoration: none;
 }
 
@@ -132,7 +140,7 @@ a:visited, a:link, a:active {
 }
 
 .project-item-description {
-  color: #DCE1EA;
+  color: #dce1ea;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -143,11 +151,11 @@ a:visited, a:link, a:active {
 .project-item {
   height: 500px;
   width: 100%;
-  color: #DCE1EA;
+  color: #dce1ea;
 }
 
 i {
-  color: #DCE1EA;
+  color: #dce1ea;
 }
 .project-item > img {
   width: 100%;
@@ -168,11 +176,11 @@ i {
 }
 
 .project-link:hover {
-  background-color: #DCE1EA;
+  background-color: #dce1ea;
   color: black;
   border-radius: 5px;
   transition: 0.5s;
-} 
+}
 
 .project-item-description > p {
   text-align: justify;
@@ -210,10 +218,9 @@ i {
   justify-content: space-around;
 }
 
-
 @media screen and (max-width: 1430px) {
   .projects-container {
-    grid-template-columns: repeat(3, 1fr)
+    grid-template-columns: repeat(3, 1fr);
   }
   .project-item-container {
     flex-direction: column;
@@ -245,5 +252,20 @@ i {
   .skills-container {
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: 1fr;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .name {
+    font-size: 50px;
+  }
+  .title {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .title {
+    font-size: 15px;
   }
 }
